# xm_project

./: 导航文档
base_server/: CMakeLists.txt  package.xml
base_server/launch/: laserfollow.launch  xm_base_server.xml
base_server/plugins/: detectDoorNodelets.xml  detectObstacleNodelets.xml  directMoveNodelets.xml
base_server/script/: catchPeople.py  navTest.py
base_server/src/: detectDoor.cpp  detectObstacle.cpp  directMove.cpp  getHouse.cpp  laserCatchPeople.cpp  xmRevive.cpp
handsfree_hw/: CMakeLists.txt  config.txt  package.xml  xiaoconfig.txt
handsfree_hw/config/: arm_controller.yaml  base_controller.yaml  default.rviz  gripper_controller.yaml  head_controller.yaml  joint_state_controller.yaml  lifting_controller.yaml
handsfree_hw/include/handsfree_hw/: base_cmd_interface.h  base_state_interface.h  gripper_cmd_interface.h  gripper_state_interface.h  head_servo_command_interface.h  hf_hw.h  hf_hw_ros.h  transport.h  transport_serial.h
handsfree_hw/include/sdk/LIB_HF_Link/: hf_link.cpp  hf_link.h
handsfree_hw/include/sdk/LIB_Robot_Abstract/: robot_abstract.h
handsfree_hw/launch/: camera.launch  fake_turtlebot.launch  handsfree_hw.launch  handsfree_hw_sim.launch  keyboard_teleop.launch  navigation.launch  xiao_test.launch  xm_base_server.xml  xm_bot.launch  xm_bot_sim.launch  xm_controller.xml
handsfree_hw/src/: hf_hw.cpp  hf_hw_ros.cpp  main.cpp  testvelocity.cpp  transport_serial.cpp  turtlebot_teleop_key
xm_2dnav/: CMakeLists.txt  finish.pgm  package.xml
xm_2dnav/launch/: dwa_astar_move_base.launch  dwa_carrot_move_base.launch  move_base_amcl_5cm.launch  move_base_gmapping.launch  xiao_cartographer.launch  xiao_move_base_astar.launch
xm_2dnav/map/: finish.pgm  finish.yaml  finishmap.pgm  finishmap.yaml  heh.pgm  heh.yaml  hehe.pgm  hehe.yaml  helpmecarry.pgm  helpmecarry.yaml  lei.pgm  lei.yaml  li.pgm  li.yaml  littletry.pgm  littletry.yaml  map_3_18.pgm  map_3_18.yaml  mapmap.pgm  mapmap.yaml  maptestmap.pgm  maptestmap.yaml  my_map.pgm  my_map1.pgm  my_map1.yaml  my_trymap.pgm  my_trymap.yaml  ren.pgm  ren.yaml  store_map.pgm  store_map.yaml
xm_2dnav/move_base_config/: .desktop  amcl_node.xml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base.xml  slam_gmapping.xml  teb_local_planner_params.yaml  xiao_local_costmap_params.yaml  xiao_move_base_astar.xml  xiao_revo_lds.lua
xm_arm_packages/: arm.docx
xm_bringup/: CMakeLists.txt  ReadMe.txt  nodelet_plugins.xml  package.xml
xm_bringup/launch/: hokuyo.launch
xm_bringup/src/: scan_deal.cpp
xm_controllers/base_simple_controller/: controll.doc  package.xml
xm_msgs/: CMakeLists.txt  package.xml
xm_msgs/msg/: xm_ObjList.msg  xm_detect_request.msg  xm_detect_response.msg
xm_msgs/srv/: xm_PickOrPlace.srv  xm_PickPlace.srv  xm_Speech_tts.srv  xm_Spl.srv  xm_house.srv
xm_smach/: package.xml  setup.py
xm_smach/launch/: nav_test.launch  speech_test.launch  winter_test.launch
xm_smach/scripts/: gpsr_2017.py  whoiswho_nopick.py
xm_urdf/: manifest.xml  urdf.rviz
xm_velocity_smoother/: CMakeLists.txt
(+67 files in other folders)
